<resources>
    <string name="app_name">WeedeoAdmin</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="Closed">Closed</string>
    <string name="enter_the_registered_mobile_number">ENTER THE REGISTERED MOBILE NUMBER</string>
    <string name="continu">CONTINUE</string>
    <string name="btn_ok">OK</string>
    <string name="current_location_gps_text">Current Location Using GPS</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDsMkRQgqqDoijzt0smlCO0XahaiwxVOtE</string>
    <string name="set_location_text">Set Your Location</string>
    <string name="location_search_hint_text">Search for area, street name…</string>


    <string name="no_geocoder_available">No geocoder available</string>

    <string name="fetch_address">Fetch address</string>

    <string name="address_found">Address found</string>

    <string name="no_address_found">Sorry, no address found</string>
    <string name="no_location_data_provided">No location data provided</string>
    <string name="service_not_available">Sorry, the service is not available</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude used</string>

    <string name="select_location">Select Location</string>
    <string name="loading">Loading…</string>
    <string name="change">Change</string>
    <string name="no_internet">Please check your internet connection</string>
    <string name="something_went_wrong_text">Something went wrong. Please try again later!!!!</string>
    <string name="confirm_location">Confirm Location</string>
    <string name="login_text">Login</string>
    <string name="verify_otp_text">Verify OTP</string>
    <string name="enter_number_text">Enter Your Phone Number</string>
    <string name="continue_text">Continue</string>
    <string name="otp_message_text">We have send you an 6 digit OTP code\nvia SMS for verification</string>
    <string name="enter_code_text">Enter code here</string>
    <string name="otp_not_receive_text">Didn\'t receive code?</string>
    <string name="resent_otp_text">Resent now</string>
    <string name="confirm_otp_text">Confirm OTP</string>
    <string name="login_number_hint"><font size="10">Enter 10 digit number</font></string>
    <string name="otp_send_sucessfully_text">OTP send successfully</string>
    <string name="invalid_number_text">Invalid number</string>
    <string name="invalid_otp_text">Invalid OTP</string>
    <string name="logout_successfully_text">Successfully logged out</string>
    <string name="title_profile">Profile</string>
    <string name="full_name_text">Full Name</string>
    <string name="gender_text">Gender</string>
    <string name="gender_male_text">Male</string>
    <string name="gender_female_text">Female</string>
    <string name="gender_other_text">Other</string>
    <string name="date_text">Date</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Martinez Clinte</string>
    <string name="nav_header_subtitle"> Vortex inc, Trivandrum</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="dash_board">Dash Board</string>
    <string name="profile">Profile</string>
    <string name="my_team">My Team</string>
    <string name="order">Order</string>
    <string name="requests">Requests</string>

    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="manage_address">Manage Address</string>
    <string name="log_out">Log out</string>
    <string name="shop_timing">Shop Timing</string>
    <string name="mobile_number">Mobile Number</string>

    <string name="agora_app_id">e9083a06af214c29a75562b62e1b1833</string>
    <!-- Obtain a temp Access Token at https://dashboard.agora.io -->
    <!-- You will need to deploy your own token server for production release -->
    <!-- Leave this value empty if Security keys/Token is not enabled for your project -->
    <string name="agora_access_token">006e9083a06af214c29a75562b62e1b1833IAA26Te2KP0AIqk5XoAaQ8emzjg9J+HT/wlqDSZWcIemESliGyIh39v0IgA+CnDuBLvDXQQAAQAAAAAAAgAAAAAAAwAAAAAABAAAAAAA</string>
    <!-- Token expires on November 7, 2019 5:10 AM UTC -->

    <string name="text_shop_timing">Shop Timing</string>
    <string name="text_update_shop_timing">Update Shop Timing</string>
    <string name="text_separation">-</string>
    <string name="text_update">Update</string>
    <string name="text_calling">Calling…</string>
    <string name="on_a_Call">You are on a call</string>
    <string name="network_retrying">Network Error Retrying…</string>
    <string name="str_user_dummy">Customer</string>
    <string name="icvideocalldummy">icVideocalldummy</string>
    <string name="icvideocallqrcode">icVideocallQrcode</string>
    <string name="icvideocallmute">icVideocallMute</string>
    <string name="icvideocallcapturephoto">icVideocallCapturePhoto</string>
    <string name="icvideocallswitchcamera">icVideocallSwitchCamera</string>

    <string name="str_monday">Monday</string>
    <string name="str_tuesday">Tuesday</string>
    <string name="str_wednesday">Wednesday</string>
    <string name="str_thursday">Thursday</string>
    <string name="str_friday">Friday</string>
    <string name="str_saturday">Saturday</string>
    <string name="str_sunday">Sunday</string>
    <string name="ic_time_edit">icTimeEdit</string>
    <string name="str_converion">%02d:%02d</string>

</resources>
