<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_10dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/monday"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="@dimen/dimen_50dp"
            android:layout_weight="1"
            android:fontFamily="@font/opensans_semibold"
            android:text="" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="@dimen/dimen_50dp"
            android:layout_weight=".5"
            android:background="@drawable/border_background"
            android:fontFamily="@font/opensans_regular"
            android:gravity="center"
            android:hint="@string/Open"
            android:inputType="time"
            android:singleLine="true"
            android:textColor="@color/colorBlack"
            android:importantForAutofill="no" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="@dimen/dimen_50dp"
            android:layout_weight=".15"
            android:gravity="center"
            android:text="@string/text_separation"
            android:textColor="@color/colorBlack"
            android:textStyle="bold" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="@dimen/dimen_50dp"
            android:layout_weight=".5"
            android:background="@drawable/border_background"
            android:fontFamily="@font/opensans_regular"
            android:gravity="center"
            android:hint="@string/Closed"
            android:inputType="time"
            android:singleLine="true"
            android:textColor="@color/colorBlack"
            android:importantForAutofill="no" />

        <ImageView
            android:id="@+id/ivTimeEditMonday"
            android:layout_width="@dimen/dimen_25dp"
            android:layout_height="@dimen/dimen_25dp"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/dimen_10dp"
            android:background="@drawable/ic_add" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_0_5"
        android:background="@color/cardview_shadow_start_color" />

</LinearLayout>